fix(icomoon.css)

--- a/src/assets/css/font.css
+++ b/src/assets/css/font.css
@@ -2,6 +2,6 @@
     font-family: isw;
     font-style: normal;
     font-weight: normal;
-    src: url('../fonts/isw/isw.woff');
+    src: url('./assets/fonts/isw/isw.woff');
     font-display: swap;
 }
