--- a/src/assets/css/icomoon.css
+++ b/src/assets/css/icomoon.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'IcoMoon';
-    src: url('../fonts/icomoon/icomoon.woff') format('woff');
+    src: url('./assets/fonts/icomoon/icomoon.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
